--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
-    <title>Pokedex DIO</title>
+    <link rel="stylesheet" href="./assets/css/types.css">
+
+
+    <title>Pokedex</title>
 </head>
 <body onload="ShowPokemons()">
     <ol id="cards">
