--- a/pages/details.html
+++ b/pages/details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
     <div id="details">
         <button><img src="../assets/images/Google_material_icons_arrow_back_24px.svg.png" alt="X" onclick="Back()"></button>        
     </div>
-    
+
     
 </body>
 <script src="../assets/javascript/details.js"></script>
