--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             
         </ol>
         <div id="groupBtnPagination">
-            <button onclick="ShowPokemons(1)" class="btnPagination">1</button>
-            <button onclick="ShowPokemons(2)" class="btnPagination">2</button>
-            <button onclick="ShowPokemons(3)" class="btnPagination">3</button>
-            <button onclick="ShowPokemons(4)" class="btnPagination">4</button>
-            <button onclick="ShowPokemons(5)" class="btnPagination">5</button>
-            <button onclick="ShowPokemons(6)" class="btnPagination">6</button>
-            <button onclick="ShowPokemons(7)" class="btnPagination">7</button>
-            <button onclick="ShowPokemons(8)" class="btnPagination">8</button>
+            <a href="./?page=1" class="btnPagination">1</a>
+            <a href="./?page=2" class="btnPagination">2</a>
+            <a href="./?page=3" class="btnPagination">3</a>
+            <a href="./?page=4" class="btnPagination">4</a>
+            <a href="./?page=5" class="btnPagination">5</a>
+            <a href="./?page=6" class="btnPagination">6</a>
+            <a href="./?page=7" class="btnPagination">7</a>
+            <a href="./?page=8" class="btnPagination">8</a>
         </div>
     </body>
     <script src="./assets/javascript/main.js"></script>
