--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <a href="./?page=6" class="btnPagination">6</a>
             <a href="./?page=7" class="btnPagination">7</a>
             <a href="./?page=8" class="btnPagination">8</a>
+            <a href="./?page=9" class="btnPagination">9</a>
+            <a href="./?page=10" class="btnPagination">10</a>
         </div>
     </body>
     <script src="./assets/javascript/main.js"></script>
