Melhoria na estilização

--- a/index.html
+++ b/index.html
@@ -16,9 +16,22 @@
     </head>
     <body onload="ShowPokemons(0)">
         <h2>Pokedex</h2>
+        <div id="groupBtnPagination">
+            <a href="./?page=1" class="btnPagination">1</a>
+            <a href="./?page=2" class="btnPagination">2</a>
+            <a href="./?page=3" class="btnPagination">3</a>
+            <a href="./?page=4" class="btnPagination">4</a>
+            <a href="./?page=5" class="btnPagination">5</a>
+            <a href="./?page=6" class="btnPagination">6</a>
+            <a href="./?page=7" class="btnPagination">7</a>
+            <a href="./?page=8" class="btnPagination">8</a>
+            <a href="./?page=9" class="btnPagination">9</a>
+            <a href="./?page=10" class="btnPagination">10</a>
+        </div>
         <ol id="cards">
             
         </ol>
+        
         <div id="groupBtnPagination">
             <a href="./?page=1" class="btnPagination">1</a>
             <a href="./?page=2" class="btnPagination">2</a>
