Melhoria na estilização

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <title>Pokedex</title>
     </head>
     <body onload="ShowPokemons(0)">
-        <h2>Pokedex</h2>
+        <img src="./assets/images/pokedex.png" id="banner"/>
         <div id="groupBtnPagination">
             <a href="./?page=1" class="btnPagination" id="page1">1</a>
             <a href="./?page=2" class="btnPagination" id="page2">2</a>
